--- a/CSS/GeneralManager.css
+++ b/CSS/GeneralManager.css
@@ -359,3 +359,100 @@ tbody tr:hover td,tbody tr.over td{
     line-height: 1;
     color: #01665e;
 }
+
+/****************************D3*********************************/
+/*
+.svg-container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;  aspect ratio 
+    vertical-align: top;
+    overflow: hidden;
+}
+.svg-content-responsive {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 0;
+}
+
+.container{
+    height:100%;
+    width:100%;
+}
+svg{
+    height:100%;
+    width:100%;
+}
+*/
+svg, g {
+  pointer-events: all;
+}
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.title {
+  text-anchor: middle;
+  font-weight: 700;
+}
+/*.x.axis path {
+  display: none;
+}*/
+
+.line {
+  fill: none;
+  /*
+  stroke: steelblue;
+  */
+  stroke-width: 1.5px;
+}
+
+.linecircle1 {
+  fill: green;
+}
+.linecircle2 {
+  fill: red;
+}
+.linecircle:hover {
+  fill: steelblue;
+}
+.flag {
+  stroke: gray;
+  stroke-dasharray: 5;
+  stroke-width: 1.5;
+  display: none;
+  pointer-events: none;
+}
+.tips {
+  pointer-events: none;
+  display: none;
+}
+.tips-border {
+  fill: #F3E4E4;
+  stroke: gray;        
+  stroke-width: 2;
+}
+.grid .tick {
+  stroke: lightgrey;
+  opacity: 0.7;
+}
+.grid path {
+  stroke-width: 0;
+} 
+
+/* 鼠标悬停时变色*/
+rect:hover{
+    fill :#E0E0E0;
+}
+    /* 过渡效果*/
+rect{
+    -moz-transiton:all 0.3s;
+    -o-transiton:all 0.3s;
+    -webkit-transition:all 0.3s;
+    transition:all 0.3s
+}
