--- a/CSS/OperationsDirector.css
+++ b/CSS/OperationsDirector.css
@@ -130,4 +130,53 @@ hr {
 }
 .floatPanel.selected {
     background-color: rgba(240, 240, 240, 0.4);
-} 
+}
+
+/* ================ CHART TOOLTIP STYLES ================ */
+
+.tipsy-inner {
+    background: #FFFFFF;
+    font-family: 'Open Sans', Arial, sans-serif;
+    border: none;
+    -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.2);
+      -msie-box-shadow: 1px 1px 2px rgba(0,0,0,.2);
+       -moz-box-shadow: 1px 1px 2px rgba(0,0,0,.2);
+         -o-box-shadow: 1px 1px 2px rgba(0,0,0,.2);
+            box-shadow: 1px 1px 2px rgba(0,0,0,.2);
+    padding: 8px 15px 9px;
+    color: #4d4d4d;
+    max-width: none;
+    border: 1px solid #dedede;
+}
+
+.tipsy-s .tipsy-arrow {
+    display: none !important;
+}
+
+.tooltipContainer .tooltipTitle {
+    color: #4d4d4d;
+    display: block;
+    text-align: center;
+    font-size: 14px;
+    margin-bottom: 5px;
+    line-height: 1;
+}
+
+.tooltipContainer .tooltipLabel {
+    color: #4d4d4d;
+    display: block;
+    text-align: center;
+    font-size: 12px;
+    margin-bottom: 10px;
+    line-height: 1;
+}
+
+.tooltipContainer .tooltipValue {
+    display: block;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 1;
+    color: #01665e;
+}
+ 
