--- a/CSS/StoreOperation.css
+++ b/CSS/StoreOperation.css
@@ -22,6 +22,40 @@ body{
     margin-right: auto;
     margin-left: auto;
 }
+
+/* ================ KPI ================ */
+.vertical-center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.KPI-Header{
+    color:#666666;
+    font-weight:bolder;
+    font-family:TPF_Font_Thin;
+    font-size:10px;
+}
+.KPI-Body{
+    color:#666666;
+    font-size:50px;
+    font-weight:lighter;
+    font-family:TPF_Font_Thin;
+}
+.KPI-Footer{
+    /*
+     、、、、、、
+    */
+}
+.KPI-Footer-Title{
+    float:left;
+    color:#666666;
+}
+.KPI-Footer-Body{
+    float:left;
+    color:red;
+    font-family:TPF_Font_Thin;
+}
 /* ================ Panel ================ */
 .panel-default {
     border: none;
@@ -44,7 +78,7 @@ body{
 }
 .panel-default > .panel-body {
     padding: 10px;
-    padding-bottom: 0px;
+    padding-bottom: 10px;
 }
 .panel-default > .panel-body ul {
     overflow: hidden;
